subiendo con un parrafo

--- a/index.html
+++ b/index.html
@@ -7,13 +7,9 @@
     <title>Primer ejercicio</title>
 </head>
 
-<h1>Primera Linea</h1>
+<h1>Titulo</h1>
 
-<h1>Segunda linea</h1>
-
-<h1>Tercera Linea</h1>
-
-<h1>Cuarta Linea</h1>
+<p>Esperamos que todo funcione bien</p>
 
 <!--Este es un primer comentario-->
 
